[tool.poetry]
name = "depot-risk-assessment"
version = "0.1.0"
description = "Project to determine the risk of a portoflio with ETFs"
authors = ["Maximilian Zwiesler <maximilian.zwiesler@mercedes-benz.com>"]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = {extras = ["optional"], version = "^0.2.44"}
openpyxl = ">=3.1.0"
ipykernel = "^6.29.5"
cleanco = "^2.3"
name-matching = "^0.8.12"
investpy = "^1.0.8"
yahooquery = "^2.3.7"
streamlit = "^1.39.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
